# bilibili-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
app/: __init__.py
app/favorite_list/: __init__.py  favorite_list.py  manage.py
app/models/: favorite_list.py  video.py
app/utils/: __init__.py  credential.py  download.py  logger.py
app/video/: __init__.py  comment.py  download.py  hot.py  rank.py  search.py  video.py  video_zone.py
tests/: test_comment.py  test_favorite_list.py  test_hot.py  test_search.py  test_video.py  test_video_zone.py
utils/: __init__.py  config.py  credential.py  logger.py
